--- a/pom.xml
+++ b/pom.xml
@@ -19,5 +19,11 @@
             <artifactId>ejml-all</artifactId>
             <version>0.41</version>
         </dependency>
+        <dependency>
+            <groupId>org.junit.jupiter</groupId>
+            <artifactId>junit-jupiter-api</artifactId>
+            <version>5.8.2</version>
+            <scope>test</scope>
+        </dependency>
     </dependencies>
 </project>
